--- a/web/index.html
+++ b/web/index.html
@@ -17,6 +17,37 @@
     <title>Memverse</title>
     <link rel="manifest" href="manifest.json">
 
+    <!-- PostHog JavaScript SDK -->
+    <script>
+        !function(t,e){var o,n,p,r;e.__SV||(window.posthog=e,e._i=[],e.init=function(i,s,a){function g(t,e){var o=e.split(".");2==o.length&&(t=t[o[0]],e=o[1]);var n=t;if("undefined"!=typeof n)for(var p=0;p<r.length;p++){var u=r[p];if(u==e){n[u]=function(){var t=Array.prototype.slice.call(arguments,0);n._i.push([u,t])};break}}else n[e]=function(){var t=Array.prototype.slice.call(arguments,0);n._i.push([e,t])}}(p=t.createElement("script")).type="text/javascript",p.async=!0,p.src=s.api_host+"/static/array.js",(n=t.getElementsByTagName("script")[0]).parentNode.insertBefore(p,n);var u=e;for(void 0!==a?u=e[a]=[]:a="posthog",u.people=u.people||[],u.toString=function(t){var e="posthog";return"posthog"!==a&&(e+="."+a),t||(e+=" (stub)"),e},u.people.toString=function(){return u.toString(1)+".people (stub)"},o="capture identify alias people.set people.set_once set_config register register_once unregister opt_out_capturing has_opted_out_capturing opt_in_capturing reset isFeatureEnabled onFeatureFlags getFeatureFlag getFeatureFlagPayload reloadFeatureFlags group updateEarlyAccessFeatureEnrollment getEarlyAccessFeatures getActiveMatchingSurveys getSurveys getNextSurveyStep onSessionId".split(" "),r=0;r<o.length;r++)g(u,o[r]);e._i.push([i,s,a])},e.__SV=1)}(document,window.posthog||[]);
+        
+        // Initialize PostHog with environment-based configuration
+        // Note: The API key will be loaded dynamically by Flutter
+        // This creates the PostHog instance for web-specific features
+        window.initPostHog = function(apiKey) {
+            if (apiKey && apiKey !== '') {
+                posthog.init(apiKey, {
+                    api_host: 'https://us.i.posthog.com',
+                    session_recording: {
+                        recordCrossOriginIframes: true,
+                        maskAllInputs: false,
+                        maskAllText: false
+                    },
+                    capture_pageview: false, // Let Flutter handle pageviews
+                    capture_pageleave: true,
+                    // Web-specific features
+                    autocapture: {
+                        dom_event_allowlist: ['click', 'change', 'submit'],
+                        url_allowlist: [window.location.origin]
+                    }
+                });
+                console.log('PostHog initialized for web with API key');
+            } else {
+                console.warn('PostHog API key not provided - analytics disabled');
+            }
+        };
+    </script>
+
     <!-- Local development instructions -->
     <script>
         console.log('==== MEMVERSE LOCAL DEVELOPMENT ====');
